<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:paddingTop="@dimen/space8"
            android:paddingStart="@dimen/space8"
            android:paddingEnd="@dimen/space8"
            android:paddingBottom="@dimen/space16"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/mainInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:layout_marginEnd="@dimen/space8"
                    android:layout_marginBottom="@dimen/space8"
                    android:layout_width="@dimen/space160"
                    app:cardCornerRadius="@dimen/space12"
                    android:layout_height="@dimen/space200">
                    <ImageView
                        android:id="@+id/poster"
                        android:layout_width="@dimen/space160"
                        android:layout_height="@dimen/space200"
                        android:scaleType="center"
                        android:src="@drawable/anim"/>
                </androidx.cardview.widget.CardView>
                <LinearLayout
                    android:layout_marginTop="@dimen/space8"
                    android:orientation="vertical"
                    android:background="@drawable/line_up_and_down"
                    android:paddingBottom="@dimen/space8"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/titleText"
                        style="@style/article_text_style"
                        android:textSize="@dimen/text20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:layout_editor_absoluteY="29dp" />
                    <TextView
                        android:id="@+id/titleInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/text_16sp_style"
                        tools:text="TextView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:layout_editor_absoluteY="29dp" />
                    <TextView
                        android:id="@+id/statusText"
                        style="@style/article_text_style"
                        android:textSize="@dimen/text20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:layout_editor_absoluteY="29dp" />
                    <TextView
                        android:id="@+id/statusInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/text_16sp_style"
                        tools:text="TextView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:layout_editor_absoluteY="29dp" />
                    <TextView
                        android:id="@+id/episodesInfo"
                        android:layout_marginTop="@dimen/space4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/text_16sp_style"
                        tools:text="TextView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:layout_editor_absoluteY="29dp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/genreText"
                style="@style/text_20sp_on_back_style"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/space4"
                android:padding="@dimen/space4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genresTitle"
                android:layout_below="@id/mainInfo"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="78dp" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/genreList"
                style="@style/text_16sp_style"
                android:padding="@dimen/space4"
                android:layout_marginEnd="@dimen/space60"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_below="@id/genreText"
                app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="78dp" />
            <TextView
                android:id="@+id/studioText"
                style="@style/text_20sp_on_back_style"
                android:textStyle="bold"
                android:padding="@dimen/space8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/studios"
                android:layout_below="@id/genreList"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="78dp" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/studioList"
                style="@style/text_16sp_style"
                android:padding="@dimen/space4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_below="@id/studioText"
                app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="78dp" />

            <LinearLayout
                android:id="@+id/descriptionView"
                android:layout_below="@id/studioList"
                android:layout_width="match_parent"
                android:background="@drawable/line_up_and_down"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/descriptionText"

                    style="@style/text_20sp_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/space4"
                    android:text="@string/description"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="78dp" />

                <TextView
                    android:id="@+id/descriptionInfo"
                    style="@style/text_16sp_style"
                    android:padding="@dimen/space12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="78dp" />
            </LinearLayout>
            <TextView
                android:id="@+id/playerText"
                android:layout_below="@id/descriptionView"
                style="@style/text_20sp_on_back_style"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/space4"
                android:layout_height="wrap_content"
                android:padding="@dimen/space4"
                android:text="@string/trailer"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent" />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/space4"
                app:cardCornerRadius="@dimen/space4"
                android:background="@drawable/current_card_back"
                android:layout_height="@dimen/space300"
                android:layout_below="@id/playerText"
                android:layout_centerInParent="true">
                <WebView
                    android:id="@+id/player"
                    android:layout_width="match_parent"
                    android:minHeight="@dimen/space60"
                    android:layout_height="@dimen/space300"/>
            </androidx.cardview.widget.CardView>

        </RelativeLayout>
    </ScrollView>
    <include
    android:id="@+id/floating_bar"
    layout="@layout/floating_bar"
    android:elevation="2dp" />
</androidx.constraintlayout.widget.ConstraintLayout>